Server/src/main/kotlin/com/example/p2p_stock/errors/UserException.kt
package com.example.p2p_stock.errors

class UserException(message: String) : RuntimeException(message)
